@@ -1,3 +1,8 @@
+2005-10-21  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	* config/sh/sh.c (prepare_move_operands): Handle the address
+	constant which is a tls symbolic address plus a constant.
+
 2005-10-21  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR driver/24473
